# agent-dev

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agent_md.md  evaluator_optimizer_md.md  orchestrator_worker_md.md  prompt_chaining_md.md  routing_md.md
docs/agent_dev/: augmented_llm_md.md  parallelization_md.md
docs/water_industry/: customer-service-md.md  drought-management-md.md  readme-md.md  treatment-monitoring-md.md  treatment-optimizer-md.md  water-quality-agent-md.md  water-quality-md.md  workshop-guide.md
notebooks/: Untitled.ipynb  workflow-agents-01.ipynb  workflow-agents-02.ipynb  workflow-agents-03.ipynb  workflow-agents.md
notebooks/agent-dev/: workflow-agents-01.ipynb  workflow-agents-02.ipynb  workflow-agents-03.ipynb  workflow-agents-04.ipynb
notebooks/water_industry_demos/: 1_water_quality_workflow.ipynb
src/agent_dev/: __init__.py  agent.py  augmented_llm.py  evaluator_optimizer.py  orchestrator_worker.py  parallelization.py  prompt_chaining.py  routing.py  utils.py
src/water_industry/: __init__.py  customer_service_system.py  drought-management-system.py  example_data.py  treatment-monitoring.py  treatment_optimizer.py  utils.py  water_quality_agent.py  water_quality_workflow.py
